tests/rosetta/out/Rust/apply-a-callback-to-an-array-1.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:45Z
fn main() {
    for i in vec![1, 2, 3, 4, 5] {
        println!("{}", i * i.to_string());
    }
}
